--- a/README.Rmd
+++ b/README.Rmd
@@ -61,7 +61,7 @@ devtools::install_github("bodkan/admixr")
 ## Warning!
 
 **This package is an alpha stage software and its API is still changing!**
-It only supports only a subset of available ADMIXTOOLS commands, although all
+It supports only a subset of available ADMIXTOOLS commands, although all
 ADMIXTOOLS commands will eventually be supported.
 
 ## Example
@@ -70,7 +70,7 @@ The following assumes that we have a working installation of ADMIXTOOLS in
 `~/local/AdmixTools-5.0/`. This example requires a small EIGENSTRAT data set
 downloaded for running testing script of the ADMIXTOOLS package.
 
-Note that a single call to our `qpDstat` function generates all required
+Note that a single call to the `d` function generates all required
 intermediate config and population files, runs ADMIXTOOLS, parses its log
 output and returns results as a `data.frame` object. It does so all behind
 the scenes without the user having to deal with "low-level" technical details.
@@ -78,7 +78,7 @@ the scenes without the user having to deal with "low-level" technical details.
 ```{r}
 library(admixr)
 
-res <- qpDstat(
+res <- d(
   W = "Yoruba", X = "French", Y = c("Han", "Japanese"), Z = "Uygur",
   prefix = "/Users/martin_petr/local/AdmixTools-5.0/data/allmap"
 )
