--- a/vignettes/overview.Rmd
+++ b/vignettes/overview.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "admixr - overview"
+title: "admixr - tutorial"
 author: "Martin Petr"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
@@ -22,33 +22,41 @@ knitr::opts_chunk$set(
 
 
 
+This vignette describes how to calculate various population admixture statistics
+($D$, $f_4$, etc.) using the `admixr` package. It assumes that you already
+know a little bit about them, because we don't have enough space
+to go into details of how and why they work. If you want to learn more and
+are not afraid of little bit of math, I highly recommend Benjamin Peter's
+[wonderful overview](http://www.genetics.org/content/early/2016/02/03/genetics.115.183913)
+of the subject and Nick Patterson's [original ADMIXTOOLS paper](http://www.genetics.org/content/192/3/1065).
 
 
 
 ## Introduction
 
 [ADMIXTOOLS](http://www.genetics.org/content/192/3/1065) is a widely used
-software package for calculating statistics and testing hypotheses about
-population admixture. However, although powerful and comprehensive, it is not
-exactly user-friendly.
+software package for calculating admixture statistics and testing population
+admixture hypotheses. However, although powerful and comprehensive, it is not
+really user-friendly.
 
 A typical ADMIXTOOLS workflow usually involves a combination of `sed`/`awk`/shell
 scripting and manual editing to create different configuration files. These are then
-passed as command-line arguments to one of ADMIXTOOLS' commands, controlling how
-to run  a particular analysis. The result of each analysis is then redirected to
+passed as command-line arguments to one of ADMIXTOOLS' commands, and control how
+to run a particular analysis. The results are then redirected to
 another file, and the user needs to extract values of interest from this file (which
-is full of redundant information), most likely using more shell
-scripting or (worse) by manual copy-pasting. The results are then analysed in R,
+is full of redundant information), often using additional command-line utilities,
+or (worse) by manual copy-pasting. The processed results are then analysed in R,
 Excel or another program.
 
 This workflow is very cumbersome, especially if one wants to explore many hypotheses
 involving different combinations of populations. Most importantly, however, it
-makes it difficult to follow good practices of reproducible science.
+makes it difficult to follow good practices of reproducible science, as it is
+nearly impossible to construct reproducible automated "pipelines".
 
 This R package makes it possible to perform all stages of ADMIXTOOLS
-analysis entirely from within R. It provides a set of convenient functions that
-completely abstract away the need for "low level" configuration of individual
-ADMIXTOOLS programs, allowing the user to focus on the analysis itself.
+analyses entirely from within R. It provides a set of convenient functions that
+completely remove the need for "low level" configuration of individual
+ADMIXTOOLS programs, allowing users to focus on the analysis itself.
 
 
 
@@ -61,8 +69,8 @@ ADMIXTOOLS programs, allowing the user to focus on the analysis itself.
 
 ## Installation
 
-To install `admixr` from Github you need to install the package 
-`devtools` first. To do this, you can simply run:
+To install `admixr` from GitHub you need to install the package 
+`devtools` first. To do this, you can simply run (in R):
 
 ```{r, eval = FALSE}
 install.packages("devtools")
@@ -70,7 +78,7 @@ devtools::install_github("bodkan/admixr")
 ```
 
 Furthermore, if you want to follow the examples in this vignette, you will need the [tidyverse](https://www.tidyverse.org) collection of
-packages, which you can install with:
+packages for convenient data analysis, which you can install with:
 
 ```{r, eval = FALSE}
 install.packages("tidyverse")
@@ -88,8 +96,8 @@ installation of ADMIXTOOLS!** Explaining how to compile it is beyond
 the scope of this document, but you can find help 
 [here](https://github.com/DReichLab/AdmixTools). **Furthermore, you
 need to make sure that R can find ADMIXTOOLS binaries on the `$PATH`.** 
-If this is not the case, running `library(admixr)` will give a message 
-with instructions on how to do this.
+If this is not the case, running `library(admixr)` will show a warning message
+with instructions on how to fix this.
 
 
 
@@ -97,7 +105,7 @@ with instructions on how to do this.
 
 
 
-## A note about EIGENSTRAT files and ADMIXTOOLS
+## A note about EIGENSTRAT files
 
 If you have an EIGENSTRAT "triplet" of files ready, and just want to know
 how to calculate different admixture statistics, feel free to skip
@@ -112,15 +120,15 @@ However, the basic idea remains the same - we want to store and
 access SNP data (REF/ALT alleles) of a set of individuals at a defined 
 set of genomic positions.
 
-EIGENSTRAT datasets always contain three kinds of files:
+EIGENSTRAT data sets always contain three kinds of files:
 
 - `ind` file - specifies name, sex and population assignment of each sample
 - `snp` file - specifies positions of SNPs, REF/ALT alleles etc.
-- `geno` file - specifies SNP data in a dense string-based format:
-  - 0: homozygous ALT
-  - 1: heterozygote
-  - 2: homozygous REF
-  - 9: missing site
+- `geno` file - specifies SNP data (one row per site) in a dense string-based format:
+  - 0: individual is homozygous ALT
+  - 1: individual is a heterozygote
+  - 2: individual is homozygous REF
+  - 9: missing data
   
 As you can see, a VCF file is essentially a combination of all three 
 files in a single file. Luckily for us, all three EIGENSTRAT files 
@@ -128,41 +136,50 @@ usually share a common path and prefix (at least you should try to
 make it so whenever you work with them). This allows us to work with
 just the prefix, instead of worrying about individual files.
 
-As such, all main `admixr` functions accept an argument called `prefix`, 
-which specifies the path to and prefix of all three EIGENSTRAT files
+As such, all main `admixr` functions accept a `prefix` argument, 
+which specifies the path and prefix of all three EIGENSTRAT files
 (you can still work with individual files if you need to, using `ind`,
 `snp` and `geno` arguments of each `admixr` function, but try to avoid
-that).
+that, as it makes your code mode verbose).
 
-Here is a prefix of a small testing SNP dataset that's distributed with
-`admixr`. We will be using this dataset in the rest of this vignette.
+Here is a prefix of a small testing SNP data set that's distributed with
+`admixr`. We will be using this data set in the rest of this vignette.
 
 ```{r}
-(eigen <- file.path(system.file(package = "admixr", "extdata"), "snps"))
+(eigenstrat <- file.path(system.file(package = "admixr", "extdata"), "snps"))
 ```
 
 We can verify that there are three files with this prefix, as they should
 be:
 
 ```{r}
-dir(path = dirname(eigen), full.names = TRUE)
+dir(path = dirname(eigenstrat), full.names = TRUE)
 ```
 
 Let's look at their contents.
 
-**`ind` file**
+#### `ind` file
 ```{r, echo = FALSE}
-cat(system(paste0("cat ", eigen, ".ind"), intern = TRUE), sep = "\n")
+cat(system(paste0("cat ", eigenstrat, ".ind"), intern = TRUE), sep = "\n")
 ```
 
-**`snp` file** (first 3 lines)
+The first column (individual ID) and the third column (population label) are
+generally not the same (individual IDs often having numerical suffixes, etc.),
+but are the same here for simplicity. Importantly, when specifying population/sample
+arguments in `admixr` functions, the information in the third column is what is
+used. For example, if you have individuals such as "French1", "French2", "French3"
+in the first column, all three sharing a "French" population label in the third
+column, specifying "French" in an `admixr` command will combine all three samples
+in a single population, and will calculate allele frequency from all of them.
+
+#### `snp` file (first 3 lines)
 ```{r, echo = FALSE}
-cat(system(paste0("head -n 3 ", eigen, ".snp"), intern = TRUE), sep = "\n")
+cat(system(paste0("head -n 3 ", eigenstrat, ".snp"), intern = TRUE), sep = "\n")
 ```
 
-**`geno` file** (first 3 lines)
+#### `geno` file (first 3 lines)
 ```{r, echo = FALSE}
-cat(system(paste0("head -n 3 ", eigen, ".geno"), intern = TRUE), sep = "\n")
+cat(system(paste0("head -n 3 ", eigenstrat, ".geno"), intern = TRUE), sep = "\n")
 ```
 
 
@@ -177,8 +194,9 @@ cat(system(paste0("head -n 3 ", eigen, ".geno"), intern = TRUE), sep = "\n")
 ## Philosophy of `admixr`
 
 The goal of `admixr` is to make ADMIXTOOLS analyses as trivial to perform
-as possible, without having to worry about par/pop/log/left/right
-files (in ADMIXTOOLS' jargon) and other low-level details.
+as possible, without having to worry about par/pop/left/right
+configuration files (as they are known in ADMIXTOOLS' jargon) and other
+low-level details.
 
 The only interface between you and ADMIXTOOLS is the following set of R functions:
 
@@ -199,7 +217,6 @@ code.
 
 
 
-## Using the main functions of `admixr`
 
 The following sections describe the usage of `admixr` on a set of
 example analyses that one might be interested in doing.
@@ -211,27 +228,38 @@ example analyses that one might be interested in doing.
 
 
 
-### $D$ statistic &mdash; `d()` function
+## $D$ statistic
 
-Next question we could ask is - how closely related are different African
-populations to non-Africans today? One way to look at this is using the 
-following D statistic:
-$D(\textrm{non-African}, \textrm{Denisova}, \textrm{African Y}, \textrm{Chimp})$.
-This statistic is simply based on counting sites that match an African 
-$Y$, and is informative about the "branching" order of non-Africans from 
-non-Africans over time. The more positive this $D$ statistic is, the more
-recently did non-Africans split from an African population $Y$.
+Let's say we are interested in the following question:
+_"Which populations today show evidence of Neanderthal admixture?_
 
+One way of looking at this is using the following D statistic:
+$$D(\textrm{present-day human W}, \textrm{African}, \textrm{Neanderthal}, \textrm{Chimp}).$$
+All $D$ statistics are based on comparing the proportions of BABA and ABBA sites
+patterns observed in data:
+
+$$ D = \frac{\textrm{# BABA sites - # ABBA sites}}{\textrm{# BABA sites + # ABBA sites}}.$$
+
+Significant departure of $D$ from zero indicates an excess of allele
+sharing between the first and the third population (positive $D$),
+or an excess of allele sharing between the second and the third population
+(negative $D$). If we get $D$ that is not significantly different from 0,
+this suggests that the first and second populations form a clade, and don't
+differ in their genetic affinity to the third population.
+
+Therefore, our $D$ statistic above simply tests whether some modern humans today
+admixed with Neanderthals, which would increase their genetic affinity to this
+archaic group compared to West Africans (whose ancestors never met Neanderthals).
+
+Let's save the population names first to make the code below more readable:
 ```{r}
-# save sample names into variables for more readable code
-nonafr <- c("French", "Sardinian", "Han", "Papuan")
-afr <- c("Khomani_San", "Mbuti", "Yoruba", "Dinka")
+pops <- c("French", "Sardinian", "Han", "Papuan", "Khomani_San", "Mbuti", "Dinka")
 ```
 
-Then we can simply run:
+Then we can calculate the $D$ statistic above by running:
 
 ```{r}
-result <- d(W = nonafr, X = "Denisova", Y = afr, Z = "Chimp", prefix = eigen)
+result <- d(W = pops, X = "Yoruba", Y = "Vindija", Z = "Chimp", prefix = eigenstrat)
 ```
 
 Which will return the following `data.frame`:
@@ -243,8 +271,8 @@ head(result)
 knitr::kable(head(result))
 ```
 
-We can see that the resulting `data.frame` object contains all the input 
-information, but also additional statistics:
+We can see that this `data.frame` object contains all the input 
+information, but contains additional columns:
 
 - `D` - $D$ statistic value
 - `stderr` - standard error of the $D$ statistic from the block jackknife
@@ -255,27 +283,23 @@ information, but also additional statistics:
 The format of output tables from other other `admixr` functions is very 
 similar. 
 
-In general, tables are not the best representation of this kind of data, 
-especially as the number of samples increases. This is how we can plot
-the results instead (using the [`ggplot2`](https://ggplot2.tidyverse.org) package):
+While we could certainly make some inferences straight from this table by looking
+at the $Z$ scores, tables in general are not the best representation of this
+kind of data, especially as the number of samples increases. This is how we can
+use the [`ggplot2`](https://ggplot2.tidyverse.org) package to plot the results:
 
 ```{r, fig.width = 7, fig.height = 4}
-ggplot(result, aes(fct_reorder(Y, D), D, color = W)) +
+ggplot(result, aes(fct_reorder(W, D), D, color = abs(Zscore) > 2)) +
   geom_point() +
-  labs(x = "African population Y")
+  geom_errorbar(aes(ymin = D - 2 * stderr, ymax = D + 2 * stderr))
 ```
 
-We can see that the closest African population to non-Africans today are 
-East African [Dinka](https://en.wikipedia.org/wiki/Dinka) (indicated by
-the highest $D$ statistic value), which is consistent with the 
-hypothesis that the ancestors of all non-Africans today split from the 
-East African lineage during the Out of Africa migration. Decreasing 
-values of the $D$ statistic for Yoruba, Mbuti and San fits with what we 
-know about the split times of African from 
-[other](http://science.sciencemag.org/content/early/2017/09/27/science.aao6266)
-[studies](https://www.cell.com/cell/abstract/S0092-8674(17)31008-5),
-with San being the most divergent modern human population, followed by 
-Mbuti, Yoruba and Dinka.
+We can see that all three Africans have $D$ consistent with 0, meaning that
+the data is consistent with the null hypothesis of no significant Neanderthal
+ancestry in Africans. On the other hand, the test rejects the null hypothesis for
+all non-Africans today, suggesting that Neanderthals admixed with the ancestors
+of present-day non-Africans. In fact, this is a similar test to the one that was
+used as evidence supporting the Neanderthal admixture hypothesis in the first place!
 
 
 
@@ -284,26 +308,19 @@ Mbuti, Yoruba and Dinka.
 
 
 
-## $f_4$ statistic &mdash; `f4()` function
+## $f_4$ statistic
 
 An alternative way of addressing the previous question is to use the 
-$f_4$ statistic, which is very similar to $D$ statistic. In fact, if $D$ 
-is calculated as
+$f_4$ statistic, which is very similar to $D$ statistic and can be calculated as:
 
-$$ D = \frac{\textrm{# BABA sites - # ABBA sites}}{\textrm{# BABA sites + # ABBA sites}},$$
-
-$f_4$ statistic is simply obtained by skipping the normalization step,
-and is equal to the numerator of the $D$ statistic. Therefore,
-
-$$ f_4 = \textrm{# BABA sites - # ABBA sites}$$
-
-Sometime one is more convenient than other though, so `admixr` provides a
-separate function for calculating $f_4$ statistics called `f4`.
+$$ f_4 = \frac{\textrm{# BABA sites - # ABBA sites}}{\textrm{# sites}}$$
+Again, significant departure of $f_4$ from 0 is informative about gene flow,
+in an analogous way to $D$ statistic.
 
 To repeat the previous analysis using $f_4$ statistic, we can run:
 
 ```{r}
-result <- f4(W = nonafr, X = "Denisova", Y = afr, Z = "Chimp", prefix = eigen)
+result <- f4(W = pops, X = "Yoruba", Y = "Vindija", Z = "Chimp", prefix = eigenstrat)
 ```
 
 ```{r eval = FALSE}
@@ -315,16 +332,19 @@ knitr::kable(head(result))
 ```
 
 ```{r, fig.width = 7, fig.height = 4}
-ggplot(result, aes(fct_reorder(Y, f4), f4, color = W)) +
+ggplot(result, aes(fct_reorder(W, f4), f4, color = abs(Zscore) > 2)) +
   geom_point() +
-  labs(x = "African population Y")
+  geom_errorbar(aes(ymin = f4 - 2 * stderr, ymax = f4 + 2 * stderr))
 ```
 
-As we can see, we can make the same conclusion using $f_4$ statistic.
-The higher the $f_4$ value, the more shared drift occured between the
-samples $W$ and $Y$. In other words, because the amount of drift on a
-branch is equivalent to the length of that branch (i.e. time), higher
-values of $f_4$ indicate a more recent split between $W$ and $Y$.
+As we can see by comparing this result to the $D$ statistic result, we can make
+the same conclusions.
+
+You might be wondering why we have both $f_4$ and $D$ if they are so similar. The
+truth is that $f_4$ is directly informative about the amount of shared genetic
+drift (the "branch length") between pairs of populations which is, in many cases,
+a very useful theoretical property. Other than that, it's often a matter of personal
+preference, and so `admixr` provides a separate functions for calculating both.
 
 
 
@@ -332,25 +352,26 @@ values of $f_4$ indicate a more recent split between $W$ and $Y$.
 
 
 
+## $f_4$-ratio statistic
 
-## $f_4$-ratio statistic &mdash; `f4ratio()` function
+Now we know that non-Africans today carry _some_ Neanderthal ancestry. But what if
+we want to know _how much_ Neanderthal ancestry they have? What proportion of their
+genomes is of Neanderthal origin?
 
-If we are einterested in estimating the *proportion* of ancestry coming from a parental lineage, we can use ratio of $f_4$ statistics.
+In general, when we are interested in estimating the *proportion* of ancestry
+coming from a parental lineage, we can use ratio of $f_4$ statistics. The theory
+between $f_4$-ratios is slightly more complicated and we can't explain it here,
+but if you're interested in the technical details XXX
 
-For example, we might be interested in knowing what is the proportion
-of Neandertal ancestry in a set of present-day humans. Using the nomenclature of Patterson et al. 2012, we can perform this calculation
+Using the nomenclature of Patterson et al. 2012, we can perform calculate $f_4$-ratios
 using the following code (`X` being a vector of samples in which we want 
-to estimate Neandertal ancestry):
+to estimate Neanderthal ancestry):
 
 ```{r}
-result <- f4ratio(
-  X = c("French", "Sardinian", "Han", "Papuan", "Dinka", "Mbuti", "Khomani_San"),
-  A = "Altai", B = "Vindija", C = "Yoruba", O = "Chimp",
-  prefix = eigen
-)
+result <- f4ratio(X = pops, A = "Altai", B = "Vindija", C = "Yoruba", O = "Chimp", prefix = eigenstrat )
 ```
 
-The ancestry proportion (number between 0 and 1) is given in the "alpha"
+The ancestry proportion (a number between 0 and 1) is given in the `alpha`
 column:
 
 ```{r, eval=FALSE}
@@ -369,15 +390,115 @@ ggplot(result, aes(fct_reorder(X, alpha), alpha, color = abs(Zscore) > 2)) +
   labs(y = "Neandertal ancestry proportion", x = "present-day individual")
 ```
 
-Despite the wide confidence intervals (caused by a very low number of 
-SNPs in our testing dataset), we can make several interesting 
-observations:
+We can make several observations:
 
-- We don't see any significant Neandertal ancestry in present-day 
-Africans (proportion consistent with 0).
-- Present-day non-Africans carry between 2-3% of Neandertal ancestry.
-- We see a much higher proportion of Neandertal ancestry in people from Papua New Guinea, consistent with previous studies of this population.
-
-Again, as you can see, we got a nice "publication-ready" figure in just a few lines of R code! No shell, no `awk/grep`, no manual editing and no copy-pasting required. 👍
+- Again, we don't see any significant Neanderthal ancestry in present-day 
+  Africans (proportion consistent with 0%), which is what we confirmed using $D$
+  and $f_4$ above.
+- Present-day non-Africans carry between 2-3% of Neanderthal ancestry.
+- We see a much higher proportion of Neanderthal ancestry in people from Papua New   
+  Guinea - more than 4%!
 
 
+
+
+
+
+
+
+## $f_3$ statistic
+
+The $f_3$ statistic, also known as the 3-population statistic, is useful whenever we
+want to:
+
+1. Estimate the branch length (shared genetic drift) between a pair of populations
+   $A$ and $B$ with respect to a common outgroup $C$. In this case, the higher the
+   $f_3$ value, the longer the shared evolutionary time between $A$ and $B$.
+2. Test whether population $C$ is a mixture of two parental populations $A$ and $B$.
+   Negative value of the $f_3$ statistic then serves as statistical evidence of
+   this admixture.
+
+As an example, imagine we are interested in relative divergence times between pairs
+of present-day human populations, and want to know in which approximate order they
+split of from each other. To address this problem, we could use $f_3$ statistic by
+fixing the $C$ outgroup as Chimp, and calculating pairwise $f_3$ statistics
+between all pairs of present-day modern humans.
+
+
+```{r}
+pops <- c("French", "Sardinian", "Han", "Papuan", "Khomani_San", "Mbuti", "Dinka", "Yoruba")
+
+result <- f3(A = pops, B = pops, C = "Chimp", prefix = eigenstrat)
+```
+
+```{r, eval=FALSE}
+head(result)
+```
+
+```{r, echo=FALSE}
+knitr::kable(head(result))
+```
+
+
+```{r, fig.width = 7, fig.height = 6}
+# sort the population labels according to an increasing f3 value relative to French
+ordered <- c(filter(result, A == "French") %>% arrange(f3) %>% .[["B"]], "French")
+
+# plot heatmap of pairwise f3 values
+result %>%
+  mutate(A = factor(A, levels = ordered),
+         B = factor(B, levels = ordered)) %>%
+  ggplot(aes(A, B)) + geom_tile(aes(fill = f3)) + theme_classic()
+```
+
+We can see that when we order the heat map labels based on values of pairwise
+$f_3$ statistics, the decreasing divergence times between human populations
+(left to right and bottom up) shows beautifully.
+
+
+
+
+
+
+
+## qpAdm method
+
+The last ADMIXTOOLS method implemented in `admixr` is qpAdm. Unfortunately, it
+is also one that is the most complex and has not been properly described and
+peer-reviewed yet. Nevertheless, it seems to have lot of power to disentangle complex
+admixture scenarios.
+
+Very briefly, qpAdm can be used to estimate admixture proportions coming from
+a series of $N$ source *ancestral* populations, assuming we have reference populations 
+that form clades with those *source* populations and are closer to them than to any of
+the specified *outgroup* populations.
+
+Formally, if the Test population has ancestry coming from $N$ ancestral source
+populations, with Reference populations being closer to them then are outgroup
+populations $O_i$, we can write:
+
+$$f_4(\textrm{Test}, O_a, O_b, O_c) \approx \sum_{i=1}^N \alpha_i f_4(\textrm{Reference}_i, O_a; O_b, O_c),$$
+
+where $\sum_{i=1}^N \alpha_i = 1$ and $\alpha_i \geq 1$ for all $i = 1, ..., N$.
+
+If this looks like black magic to you, I sincerely apologize and direct you
+to the Supplementary Section 9 of Haak et al., and an [informal write-up](https://github.com/DReichLab/AdmixTools/blob/master/pdoc.pdf)
+distributed with the ADMIXTOOLS software.
+
+Probably the simples possible case to show that qpAdm works is by returning
+to the question of estimating Neanderthal ancestry proportions. Let's define:
+
+- *target* European populations to estimate ancestry proportions for
+- *source* populations as Vindija Neanderthal and African (two sources of
+  ancestries in all modern humans)
+- *outgroup* populations Chimp, Altai Neanderthal and Denisovan (which are further
+  from the true ancestral populations as the *source* populations)
+
+```{r}
+result <- qpAdm(
+  target = c("French", "Sardinian", "Mbuti", "Dinka"),
+  refs = c("Vindija", "Yoruba"),
+  outgroups = c("Chimp", "Denisova", "Altai"),
+  prefix = eigenstrat
+)
+```
