--- a/README.Rmd
+++ b/README.Rmd
@@ -18,8 +18,8 @@ knitr::opts_chunk$set(
 
 _**"Make ADMIXTOOLS fun again!"**_
 
-**TL;DR** Perform ADMIXTOOLS analyses directly from R, without ever having to
-deal with par/pop/log files again.
+**TL;DR** Perform ADMIXTOOLS analyses directly from R, without having to
+deal with par/pop/log files ever again.
 
 ## Introduction
 
@@ -30,20 +30,19 @@ really user-friendly.
 
 A typical ADMIXTOOLS workflow usually involves a combination of `sed`/`awk`/shell
 scripting and manual editing to create different configuration files. These are then
-passed as command-line arguments to one of ADMIXTOOLS' commands, and control how
+passed as command-line arguments to one of ADMIXTOOLS' commands and control how
 to run a particular analysis. The results are then redirected to
-another file, and the user needs to extract values of interest from this file (which
-is full of redundant information), often using additional command-line utilities,
-or (worse) by manual copy-pasting. The processed results are then analysed in R,
-Excel or another program.
+another file, which has to be parsed by the user to extract values of interest,
+often using command-line utilities again or (worse) by manual copy-pasting.
+The processed results are then analysed in R, Excel or another program.
 
 This workflow is very cumbersome, especially if one wants to explore many hypotheses
 involving different combinations of populations. Most importantly, however, it
 makes it difficult to follow good practices of reproducible science, as it is
 nearly impossible to construct reproducible automated "pipelines".
 
-This R package makes it possible to perform all stages of ADMIXTOOLS
-analyses entirely from within R. It provides a set of convenient functions that
+This R package makes it possible to perform all stages of an ADMIXTOOLS
+analysis entirely from within R. It provides a set of convenient functions that
 completely remove the need for "low level" configuration of individual
 ADMIXTOOLS programs, allowing users to focus on the analysis itself.
 
