--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -79,14 +79,7 @@ devtools::install_github("bodkan/admixr")
 Furthermore, if you want to follow the examples in this vignette, you will need the [tidyverse](https://www.tidyverse.org) collection of
 packages for convenient data analysis, which you can install with:
 
-```{r, results = "hide", message = FALSE, echo = FALSE}
-# ERROR: dependencies ‘MASS’, ‘mgcv’ are not available for package ‘ggplot2’checking for hidden files and directories
-# https://github.com/rstudio/packrat/issues/484#issuecomment-405621083
-options(repos = c(CRAN = "https://cran.rstudio.com"))
-install.packages(c("MASS", "mgcv"))
-```
-
-```{r, results = "hide", message = FALSE}
+```{r, eval = FALSE}
 install.packages("tidyverse")
 ```
 
@@ -448,7 +441,7 @@ knitr::kable(head(result))
 ```
 
 
-```{r, fig.width = 7, fig.height = 6}
+```{r, fig.width = 8, fig.height = 6}
 # sort the population labels according to an increasing f3 value relative to French
 ordered <- filter(result, A == "French") %>% arrange(f3) %>% .[["B"]] %>% c("French")
 
